@@ -16,8 +16,9 @@ importFromUrlTitle=Enter URL
 importFromUrlText=Enter the URL from which you want to import the substitutions list
 nonSupportedProtocol=Non-supported protocol
 invalidSubscriptionUrl=The subscription URL isn't valid
-onlyHttp=Only HTTP is supported.
 httpError=HTTP error
 cantConnectToServerTitle=Can't connect to server
 cantConnectToServerText=Can't connect to the server specified in the URL %S
+fileNotFoundTitle=File not found
+fileNotFoundText=File %S not found
 unexpectedError=Unexpected error
