@@ -1,6 +1,10 @@
-* Added two new XPaths to select text nodes (fixes issue 35).
+* Added two new XPaths to select text nodes (issue 35).
 * Compatibility with Firefox 4.0.
 * Integration with the Firefox 4 app menu.
+* Subscription works from local files (URL file://...) (issue 25).
+* String changes:
+  - foxreplace.dtd: changed name: menuEditReplace -> menuReplace, menuContextFoxReplace -> contextMenuFoxReplace.
+  - foxreplace.properties: new: fileNotFoundTitle, fileNotFoundText; removed: onlyHttp.
 
 v0.12.2 (10-8-2009)
 * Bugfix: the modules directory wasn't included in the XPI.
